[project]
name = "env_2515_stock-monitor"
version = "0.1.0"
description = "Stock price real-time monitoring with Yahoo Finance API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "fastmcp>=1.0",
    "httpx>=0.27.0",
    "mcp[server]==1.1.2",
    "pydantic>=2.7.2",
    "requests==2.31.0",
    "uvicorn[standard]==0.27.0",
]