[project]
name = "env_2559_unifuncs-reader"
version = "0.1.0"
description = "UniFuncs Web Reader - read web pages, PDF, Word docs with AI content extraction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "fastmcp>=1.0",
    "httpx>=0.27.0",
    "mcp[server]==1.1.2",
    "pydantic>=2.7.2",
    "requests==2.31.0",
    "uvicorn[standard]==0.27.0",
]