[project]
name = "env_2896_prediction-trader"
version = "0.1.0"
description = "AI-powered prediction market analysis across Polymarket and Kalshi with social signals"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "fastmcp>=1.0",
    "httpx>=0.27.0",
    "mcp[server]==1.1.2",
    "pydantic>=2.7.2",
    "requests==2.31.0",
    "uvicorn[standard]==0.27.0",
]