[project]
name = "env_4068_browser-use-local"
version = "0.1.0"
description = "Browser automation via browser-use CLI with session management, screenshots, HTML extraction, and LLM-powered agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "fastmcp>=1.0",
    "httpx>=0.27.0",
    "mcp[server]==1.1.2",
    "pydantic>=2.7.2",
    "requests==2.31.0",
    "uvicorn[standard]==0.27.0",
    "browser-use>=0.1.0",
    "playwright>=1.40.0",
    "opencv-python>=4.8.0",
    "langchain-openai>=0.1.0",
]