[project]
name = "research-vault"
version = "2.1.0"
description = "Local-first orchestration engine for high-velocity AI research"
authors = [
    { name = "lraivisto", email = "lraivisto@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.9.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "mcp>=1.26.0",
    "responses>=0.25.8",
]

[project.scripts]
vault = "scripts.vault:main"
