[project]
name = "identity-resolver"
version = "1.0.6"
description = "Canonical user identity resolution across messaging channels for OpenClaw"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Alex Chen", email = "alex.chen31337@gmail.com"}
]

# Pure Python stdlib - no external dependencies needed
dependencies = []

[project.urls]
Homepage = "https://github.com/clawinfra/identity-resolver"
Repository = "https://github.com/clawinfra/identity-resolver.git"
Issues = "https://github.com/clawinfra/identity-resolver/issues"

[tool.uv]
dev-dependencies = []
