[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airbnb-search"
version = "0.1.3"
description = "Search Airbnb listings from the command line"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Olaf", email = "olaf.bot@agentmail.to"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.25.0",
]

[project.scripts]
airbnb-search = "airbnb_search.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/Olaf-s-World/airbnb-search"
Repository = "https://github.com/Olaf-s-World/airbnb-search"
