[project]
name = "sota-tracker-mcp"
version = "1.0.0"
description = "MCP server that provides real-time SOTA AI model information to prevent Claude from suggesting outdated models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0,<3.0",
    "aiohttp>=3.9",
    "huggingface_hub>=0.20",
    "python-dotenv>=1.0",
]

[project.scripts]
sota-tracker = "server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
