[project]
name = "google-web-search-skill"
version = "1.0.0"
description = "Real-time web search using Gemini API's google_search grounding tool - natural language answers with verifiable citations."
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.50.0",
    "pydantic-settings>=2.0.0",
]
