[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawback"
version = "1.1.0"
description = "Congressional Trade Mirror Bot - Automatically mirror congressional stock trades"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "ClawBack Team"}
]
keywords = ["trading", "stocks", "congress", "automation", "etrade"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "requests>=2.28.0",
    "requests-oauthlib>=1.3.0",
    "pdfplumber>=0.9.0",
    "beautifulsoup4>=4.11.0",
    "pandas>=1.5.0",
    "yfinance>=0.2.0",
    "schedule>=1.2.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
]
selenium = [
    "selenium>=4.10.0",
    "webdriver-manager>=4.0.0",
]

[project.scripts]
clawback = "clawback.cli:main"

[project.urls]
Homepage = "https://github.com/mainfraame/clawback"
Repository = "https://github.com/mainfraame/clawback"
Issues = "https://github.com/mainfraame/clawback/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clawback = ["*.json", "*.template.json"]

# Ruff linting configuration
[tool.ruff]
target-version = "py39"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes (includes unused imports F401, unused variables F841)
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear (common bugs and design problems)
    "C4",     # flake8-comprehensions (better list/dict comprehensions)
    "UP",     # pyupgrade (modern Python syntax)
    "SIM",    # flake8-simplify (simplifiable code)
    "PIE",    # flake8-pie (misc lints)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "SIM108", # Use ternary operator (can reduce readability)
    "SIM102", # Nested if statements (sometimes more readable)
    "SIM103", # Return condition directly (sometimes more readable)
    "SIM105", # Use contextlib.suppress (preference)
    "UP006",  # Use `type` instead of `Type` (requires Python 3.9+)
    "UP035",  # `typing.X` deprecated (keep for Python 3.9 compat)
    "RUF012", # Mutable class attributes ClassVar (too verbose)
    "RUF013", # PEP 484 implicit Optional (too verbose)
    "RUF059", # Unpacked unused variables (use underscore prefix)
    "B007",   # Loop control variable not used (use underscore prefix)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["B011"]      # Allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["clawback"]
force-single-line = false
combine-as-imports = true
