[project]
name = "xhs-toolkit"
version = "1.2.0"
description = "一个强大的小红书自动化工具包，支持通过MCP协议与AI客户端集成"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "aki66938"},
]
keywords = ["xiaohongshu", "mcp", "automation", "ai", "小红书"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "selenium>=4.15.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "pandas>=2.0.0",
    "cryptography>=41.0.0",
    "pycryptodome>=3.19.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
]

[project.scripts]
xhs-toolkit = "xhs_toolkit:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
