[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fund-tools"
version = "1.0.0"
description = "基金持仓管理系统"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "qiyan", email = "yhb3420@qq.com"}
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
fund-tools = "src.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
