[project]
name = "env_2896_prediction-trader"
version = "0.1.0"
description = "Prediction-trader MCP 工具环境，SQLite 状态后端 + 状态访问层，供数据合成流水线使用"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "fastmcp>=1.0",
    "httpx>=0.27.0",
    "mcp[server]==1.1.2",
    "pydantic>=2.7.2",
    "uvicorn[standard]==0.27.0",
]
