[project]
name = "env_2896_prediction-trader"
version = "0.1.0"
description = "Prediction-trader light MCP environment (tools.jsonl-only + LLM + KV state) for data-synthesis workflow"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=1.0",
    "mcp[server]==1.1.2",
    "openai>=1.0.0",
]
