[project]
name = "env_2896_prediction-trader"
version = "0.1.0"
description = "Prediction-trader light MCP environment (tools.jsonl-only + LLM + KV state) for data-synthesis workflow"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=1.0",
    "mcp[server]==1.1.2",
    "openai>=1.0.0",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
